@@ -15,6 +15,8 @@
  */
 package io.camunda.zeebe.spring.client.properties;
 
+import static io.camunda.zeebe.spring.client.configuration.PropertyUtil.getOrLegacyOrDefault;
+import static java.util.Optional.ofNullable;
 import static org.apache.commons.lang3.StringUtils.*;
 
 import io.camunda.zeebe.client.api.response.ActivatedJob;
@@ -25,14 +27,14 @@ import io.camunda.zeebe.spring.client.annotation.value.ZeebeWorkerValue;
 import io.camunda.zeebe.spring.client.bean.CopyNotNullBeanUtilsBean;
 import io.camunda.zeebe.spring.client.bean.MethodInfo;
 import io.camunda.zeebe.spring.client.bean.ParameterInfo;
+import io.camunda.zeebe.spring.client.properties.common.ZeebeClientProperties;
 import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.util.ReflectionUtils;
@@ -43,10 +45,13 @@ public class PropertyBasedZeebeWorkerValueCustomizer implements ZeebeWorkerValue
   private static final CopyNotNullBeanUtilsBean BEAN_UTILS_BEAN = new CopyNotNullBeanUtilsBean();
 
   private final ZeebeClientConfigurationProperties zeebeClientConfigurationProperties;
+  private final CamundaClientProperties camundaClientProperties;
 
   public PropertyBasedZeebeWorkerValueCustomizer(
-      final ZeebeClientConfigurationProperties zeebeClientConfigurationProperties) {
+      final ZeebeClientConfigurationProperties zeebeClientConfigurationProperties,
+      final CamundaClientProperties camundaClientProperties) {
     this.zeebeClientConfigurationProperties = zeebeClientConfigurationProperties;
+    this.camundaClientProperties = camundaClientProperties;
   }
 
   @Override
@@ -62,20 +67,21 @@ public class PropertyBasedZeebeWorkerValueCustomizer implements ZeebeWorkerValue
       LOG.debug(
           "Worker '{}': ActivatedJob is injected, no variable filtering possible",
           zeebeWorkerValue.getName());
-    } else if (zeebeWorkerValue.isForceFetchAllVariables()) {
+    } else if (zeebeWorkerValue.getForceFetchAllVariables() != null
+        && zeebeWorkerValue.getForceFetchAllVariables()) {
       LOG.debug("Worker '{}': Force fetch all variables is enabled", zeebeWorkerValue.getName());
-      zeebeWorkerValue.setFetchVariables(new String[0]);
+      zeebeWorkerValue.setFetchVariables(List.of());
     } else {
       final Set<String> variables = new HashSet<>();
       if (zeebeWorkerValue.getFetchVariables() != null) {
-        variables.addAll(Arrays.asList(zeebeWorkerValue.getFetchVariables()));
+        variables.addAll(zeebeWorkerValue.getFetchVariables());
       }
       variables.addAll(
           readZeebeVariableParameters(zeebeWorkerValue.getMethodInfo()).stream()
               .map(this::extractVariableName)
-              .collect(Collectors.toList()));
+              .toList());
       variables.addAll(readVariablesAsTypeParameters(zeebeWorkerValue.getMethodInfo()));
-      zeebeWorkerValue.setFetchVariables(variables.toArray(new String[0]));
+      zeebeWorkerValue.setFetchVariables(variables.stream().toList());
       LOG.debug(
           "Worker '{}': Fetching only required variables {}",
           zeebeWorkerValue.getName(),
@@ -114,7 +120,27 @@ public class PropertyBasedZeebeWorkerValueCustomizer implements ZeebeWorkerValue
 
   private void applyOverrides(final ZeebeWorkerValue zeebeWorker) {
     final Map<String, ZeebeWorkerValue> workerConfigurationMap =
-        zeebeClientConfigurationProperties.getWorker().getOverride();
+        getOrLegacyOrDefault(
+            "Override",
+            () -> camundaClientProperties.getZeebe().getOverride(),
+            () -> zeebeClientConfigurationProperties.getWorker().getOverride(),
+            new HashMap<>(),
+            null);
+    try {
+      if (ofNullable(camundaClientProperties.getZeebe())
+          .map(ZeebeClientProperties::getDefaults)
+          .isPresent()) {
+        BEAN_UTILS_BEAN.copyProperties(
+            zeebeWorker, camundaClientProperties.getZeebe().getDefaults());
+      }
+    } catch (final IllegalAccessException | InvocationTargetException e) {
+      throw new RuntimeException(
+          "Error while copying properties from "
+              + camundaClientProperties.getZeebe().getDefaults()
+              + " to "
+              + zeebeWorker,
+          e);
+    }
     final String workerType = zeebeWorker.getType();
     if (workerConfigurationMap.containsKey(workerType)) {
       final ZeebeWorkerValue zeebeWorkerValue = workerConfigurationMap.get(workerType);
@@ -130,7 +156,12 @@ public class PropertyBasedZeebeWorkerValueCustomizer implements ZeebeWorkerValue
 
   private void applyDefaultWorkerName(final ZeebeWorkerValue zeebeWorker) {
     final String defaultJobWorkerName =
-        zeebeClientConfigurationProperties.getDefaultJobWorkerName();
+        getOrLegacyOrDefault(
+            "DefaultJobWorkerName",
+            () -> camundaClientProperties.getZeebe().getDefaults().getName(),
+            zeebeClientConfigurationProperties::getDefaultJobWorkerName,
+            null,
+            null);
     if (isBlank(zeebeWorker.getName())) {
       if (isNotBlank(defaultJobWorkerName)) {
         LOG.debug(
@@ -152,7 +183,12 @@ public class PropertyBasedZeebeWorkerValueCustomizer implements ZeebeWorkerValue
 
   private void applyDefaultJobWorkerType(final ZeebeWorkerValue zeebeWorker) {
     final String defaultJobWorkerType =
-        zeebeClientConfigurationProperties.getDefaultJobWorkerType();
+        getOrLegacyOrDefault(
+            "DefaultJobWorkerType",
+            () -> camundaClientProperties.getZeebe().getDefaults().getType(),
+            zeebeClientConfigurationProperties::getDefaultJobWorkerType,
+            null,
+            null);
     if (isBlank(zeebeWorker.getType())) {
       if (isNotBlank(defaultJobWorkerType)) {
         LOG.debug(
